--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,3 +1,8 @@
 :root {
-   --font-main: Raleway, sans-serif;
+  --container-width: 1260px;
+
+  --font-main: "Raleway", sans-serif;
+  --second-family: "Open Sans", sans-serif;
+  --third-family: "Roboto", sans-serif;
+  --font3: "Lato", sans-serif;
 }
