--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,28 @@
-<header class="header">проверка хэдера</header>
+<header class="header">
+   
+  <div class="header__topbar">
+    <a href="'#">+7 (499) 258-625-33</a>
+    <input type="text" class="header__topbar-search" />
+  </div>
+
+  <div class="header__row">
+    <a href="/" class="header__logo">
+      <img
+        src="/img/logo.svg"
+        width="290"
+        height="115"
+        alt="Логотип компании Anima"
+      />
+    </a>
+
+    <nav class="header__nav">
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#!">КАТАЛОГ</a></li>
+        <li class="nav__item"><a href="#!">АКЦИИ</a></li>
+        <li class="nav__item"><a href="#!">БЛОГ</a></li>
+        <li class="nav__item"><a href="#!">СОТРУДНИЧЕСТВО</a></li>
+        <li class="nav__item"><a href="/">ОПЛАТА И ДОСТАВКА</a></li>
+      </ul>
+    </nav>
+</div>
+</header>
