--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -9,20 +9,29 @@
   font-size: 18px;
   line-height: 21px;
   border: 1px solid red;
- 
-  padding: 10px 20px; // Отступы для всего хедера
+  padding: 10px 20px; 
 
   &__topbar {
-   
     text-align: right;
     padding-top: 22px;
+   
 
     a {
       color: white;
     }
+
+   
+    &-search {
+      border: 2px solid red; 
+      color: #ff1d1d; 
+
+      &:focus {
+        border-color: darkred; 
+      }
+    }
   }
 
-  &__row{
+  &__row {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -30,13 +39,13 @@
 
   &__logo {
     img {
-      max-width: 100%; // Адаптивность логотипа height: auto;
+      max-width: 100%; 
     }
   }
 
   &__nav {
-   margin-top: 20px;
-   
+    margin-top: 20px;
+
     .nav__list {
       display: flex;
       list-style: none;
