--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,19 @@
 <header class="header">
    
   <div class="header__topbar">
+    <svg class="icon" width="24" height="24">
+      <use xlink:href="img/symbol/sprite.svg#whatsapp"></use>
+    </svg>
+    <svg class="icon" width="24" height="24">
+      <use xlink:href="img/symbol/sprite.svg#phone"></use>
+    </svg>
     <a href="'#">+7 (499) 258-625-33</a>
+    <div class="header__topbar-search-wrapper">
     <input type="text" class="header__topbar-search" />
+    <svg class="header__topbar-search-icon" width="24" height="24">
+      <use xlink:href="img/symbol/sprite.svg#Search"></use>
+    </svg>
+    </div>
   </div>
 
   <div class="header__row">
