--- a/src/css/main.css
+++ b/src/css/main.css
@@ -179,7 +179,6 @@ legend {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
-  border: 1px solid red;
   padding: 10px 20px;
 }
 .header__topbar {
@@ -194,8 +193,8 @@ legend {
   display: inline-block;
 }
 .header__topbar-search {
-  padding-left: 30px; /* Добавьте отступ слева для текста */
-  border: 1px solid #ccc; /* Граница для поля ввода */
+  padding-left: 30px;
+  border: 1px solid #ccc;
   height: 36px;
 }
 .header__topbar-search:focus {
@@ -234,4 +233,70 @@ legend {
 }
 .header__nav .nav__list .nav__item {
   margin-right: 90px;
+}
+
+.hero {
+  position: relative;
+  min-height: 100vh;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.93) 40.86%, rgba(0, 0, 0, 0.7998) 100%);
+}
+.hero__background {
+  position: absolute;
+  bottom: 10%;
+  width: 100%;
+  height: 100%;
+  background-image: url("/img/MainImage.png");
+  background-size: auto;
+  background-position: right;
+  background-repeat: no-repeat;
+  z-index: 2;
+}
+.hero__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  max-width: 780px;
+  position: absolute;
+  background-color: #000;
+  box-shadow: 0px 0px 33px 9px rgba(255, 255, 255, 0.031372549);
+  padding: 67px 42px 58px 102px;
+  z-index: 3;
+  transform: translate(0%, 65%);
+  left: -2%;
+  text-transform: uppercase;
+}
+.hero__subtitle {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #9c9c9c;
+}
+.hero__title {
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 58px;
+  color: white;
+}
+.hero__title .hero__highlight {
+  color: #28553f;
+}
+.hero__btn-wrapper {
+  display: flex;
+}
+.hero__btn-wrapper .btn {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  color: white;
+  text-align: center;
+  margin-top: 25px;
+  margin-right: 22px;
+}
+.hero__btn-wrapper .btn.btn-calc {
+  background-color: #28553f;
+  padding: 25px 40px 23px 41px;
+}
+.hero__btn-wrapper .btn.btn-contact {
+  background-color: #141414;
+  padding: 25px 65px 23px 64px;
 }/*# sourceMappingURL=main.css.map */
