черновой вариант секции advantages

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -78,6 +78,10 @@ body {
   font-family: var(--font-main);
 }
 
+.container {
+  max-width: 1262px;
+}
+
 /* Reset and base styles  */
 * {
   padding: 0px;
@@ -299,4 +303,51 @@ legend {
 .hero__btn-wrapper .btn.btn-contact {
   background-color: #141414;
   padding: 25px 65px 23px 64px;
+}
+
+.advantages {
+  min-height: 100vh;
+}
+.advantages__title {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 46px;
+  color: #28553f;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0 auto;
+  width: 40%;
+  margin-top: 70px;
+}
+.advantages__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 20px 40px 0 40px;
+  color: #282A30;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 25px;
+  text-transform: uppercase;
+}
+.advantages__leftsidelist {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.advantages__rightsidelist {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.advantages__list-item {
+  margin-top: 64px;
+}
+.advantages__list-item:last-child {
+  margin-bottom: 20px;
+}
+.advantages__image {
+  flex: 0 0 auto;
+  max-width: 400px;
+  margin: 0 160px;
 }/*# sourceMappingURL=main.css.map */
