--- a/src/partials/promotion.html
+++ b/src/partials/promotion.html
@@ -1,3 +1,21 @@
 <section class="promotion">
+  <div class="promotion__linkwrap">
+    <a href="#" class="promotion__viewall">Смотреть все</a>
+    <svg class="icon" width="24" height="24">
+      <use xlink:href="img/symbol/sprite.svg#viewarrowwhite"></use>
+    </svg>
+  </div>
+  <div class="promotion__infoblock">
+    <h2 class="promotion__title">
+      Актуальные акции на
+      <span class="promotion__highlight">нашу продукцию</span>
+    </h2>
+    <p class="promotion__description">
+      Учитывая ключевые сценарии поведения, обучения кадров влечет за собой
+      процесс внедрения и модернизации распределения
+    </p>
+   
+      <a href="#" class="btn btn-catalogue">Перейти в каталог</a>
 
+  </div>
 </section>
