--- a/src/css/main.css
+++ b/src/css/main.css
@@ -387,4 +387,61 @@ legend {
   background-image: url("/img/back_opaque.jpg"), linear-gradient(90deg, rgba(0, 0, 0, 0.8) 36.74%, rgba(0, 0, 0, 0.21) 100%);
   background-size: contain;
   background-blend-mode: overlay;
+  padding-top: 60px;
+  padding-right: 100px;
+}
+.promotion__viewall {
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 24px;
+  color: #FFF;
+  text-transform: uppercase;
+}
+.promotion__linkwrap {
+  text-align: right;
+  margin-right: 50px;
+}
+.promotion__infoblock {
+  display: flex;
+  flex-direction: column; /* Элементы будут выровнены по колонкам */
+  justify-content: center;
+  max-width: 707px;
+  position: absolute;
+  background-color: #000;
+  padding: 41px 17px 47px 100px;
+  z-index: 3;
+  transform: translate(0%, 40%);
+  left: -6%;
+  margin-left: 70px;
+  gap: 20px;
+}
+.promotion__title {
+  font-weight: 500;
+  font-size: 43px;
+  line-height: 50px;
+  color: white;
+  text-transform: uppercase;
+}
+.promotion__title .promotion__highlight {
+  color: #28553f;
+}
+.promotion__description {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 25px;
+  color: white;
+}
+.promotion .btn {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 17px;
+  color: white;
+  text-align: center;
+  align-self: flex-start;
+  margin-top: 20px;
+  padding: 21px 40px;
+  text-transform: uppercase;
+}
+.promotion .btn.btn-catalogue {
+  background-color: #28553f;
 }/*# sourceMappingURL=main.css.map */
