section promotion (draft version attached)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -403,7 +403,7 @@ legend {
 }
 .promotion__infoblock {
   display: flex;
-  flex-direction: column; /* Элементы будут выровнены по колонкам */
+  flex-direction: column;
   justify-content: center;
   max-width: 707px;
   position: absolute;
@@ -444,4 +444,15 @@ legend {
 }
 .promotion .btn.btn-catalogue {
   background-color: #28553f;
+}
+.promotion__gallery {
+  position: absolute;
+  flex-wrap: wrap;
+  right: 0;
+  max-width: 40%;
+  margin-top: 15px;
+}
+.promotion__gallery img {
+  gap: 20px;
+  margin: 20px;
 }/*# sourceMappingURL=main.css.map */
