--- a/src/partials/promotion.html
+++ b/src/partials/promotion.html
@@ -16,6 +16,11 @@
     </p>
    
       <a href="#" class="btn btn-catalogue">Перейти в каталог</a>
-
+  </div>
+  <div class="promotion__gallery">
+    <img src="/img/product.png" alt="">
+    <img src="/img/product.png" alt="">
+    <img src="/img/product.png" alt="">
+    <img src="/img/product.png" alt="">
   </div>
 </section>
