section ideas: grid layout

--- a/src/partials/ideas.html
+++ b/src/partials/ideas.html
@@ -1,3 +1,18 @@
 <section class="ideas">
     <h2 class="ideas__title">идеи для <span class="ideas__highlight">вдохновения</span></h2>
+    <div class="ideas__gallery">
+        <img class="ideas__image ideas__image--large" src="/img/IDEA1.jpg" alt="">
+        <img class="ideas__image ideas__image--small" src="/img/IDEA2.jpg" alt="">
+        <img class="ideas__image ideas__image--small" src="/img/IDEA3.jpg" alt="">
+        <img class="ideas__image ideas__image--small" src="/img/IDEA4.jpg" alt="">
+        <img class="ideas__image ideas__image--small" src="/img/IDEA5.jpg" alt="">
+    </div>
+    <div class="ideas__linkwrap">
+    <a href='#' class="btn btn-photos">Смотреть еще больше фотографий 
+        <svg class="icon" width="24" height="24">
+            <use xlink:href="img/symbol/sprite.svg#viewarrowwhite"></use>
+          </svg>
+    </a>
+    
+    </div>
 </section>
