--- a/src/partials/promotion.html
+++ b/src/partials/promotion.html
@@ -1,9 +1,9 @@
 <section class="promotion">
   <div class="promotion__linkwrap">
-    <a href="#" class="promotion__viewall">Смотреть все</a>
-    <svg class="icon" width="24" height="24">
+    <a href="#" class="promotion__viewall">Смотреть все<svg class="icon" width="24" height="24">
       <use xlink:href="img/symbol/sprite.svg#viewarrowwhite"></use>
-    </svg>
+    </svg></a>
+    
   </div>
   <div class="promotion__infoblock">
     <h2 class="promotion__title">
