--- a/src/css/main.css
+++ b/src/css/main.css
@@ -466,7 +466,57 @@ legend {
   line-height: 46px;
   color: #282A30;
   text-transform: uppercase;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  max-width: 30%;
 }
 .ideas__title .ideas__highlight {
   color: #28553f;
+}
+.ideas__gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-left: 20px;
+  justify-items: center;
+  align-items: center;
+}
+.ideas__gallery__image {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.ideas__gallery__image--large {
+  grid-area: 1/1/3/2;
+}
+.ideas__gallery img:nth-of-type(1) {
+  grid-area: 1/1/3/2;
+}
+.ideas__gallery img:nth-of-type(2) {
+  grid-area: 1/2/2/3;
+}
+.ideas__gallery img:nth-of-type(3) {
+  grid-area: 1/3/2/4;
+}
+.ideas__gallery img:nth-of-type(4) {
+  grid-area: 2/2/3/3;
+}
+.ideas__gallery img:nth-of-type(5) {
+  grid-area: 2/3/3/4;
+}
+.ideas__linkwrap {
+  text-align: right;
+  margin-top: 60px;
+}
+.ideas .btn {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 52px;
+  color: white;
+  text-align: center;
+  margin-top: 25px;
+}
+.ideas .btn.btn-photos {
+  background-color: #28553f;
+  padding: 25px 40px 23px 41px;
 }/*# sourceMappingURL=main.css.map */
