--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,10 +1,10 @@
 <section class="products">
   <h2 class="products__title">Изделия <br> из натурального камня</h2>
   <div class="products__linkwrap">
-    <a href="#" class="products__viewall">Смотреть все</a>
-    <svg class="icon" width="24" height="24">
+    <a href="#" class="products__viewall">Смотреть все <svg class="icon" width="24" height="24">
       <use xlink:href="img/symbol/sprite.svg#viewarrowblack"></use>
-    </svg>
+    </svg></a>
+    
   </div>
   <div class="products__gallery">
     <img src="/img/screenshot2.png" alt=""/>
