--- a/src/styles/blocks/_ideas.scss
+++ b/src/styles/blocks/_ideas.scss
@@ -2,15 +2,71 @@
     min-height: 100vh;
 
     &__title {
-        font-weight:400;
+        font-weight: 400;
         font-size: 40px;
         line-height: 46px;
-        color:#282A30;
+        color: #282A30;
         text-transform: uppercase;
+        margin-top: 60px;
+        margin-bottom:60px;
+        max-width: 30%;
 
         & .ideas__highlight {
             color: #28553f;
-          }
+        }
+    }
 
+    &__gallery {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin-left: 20px;
+     
+        justify-items: center;
+        align-items: center;
+
+        &__image {
+       width: 100%;
+            height: auto;
+            object-fit: cover;
+
+            &--large {
+                grid-area: 1 / 1 / 3 / 2;
+            }
+        }
+
+        img:nth-of-type(1) {
+            grid-area: 1 / 1 / 3 / 2;
+        }
+        img:nth-of-type(2) {
+            grid-area: 1 / 2 / 2 / 3;
+        }
+        img:nth-of-type(3) {
+            grid-area: 1 / 3 / 2 / 4;
+        }
+        img:nth-of-type(4) {
+            grid-area: 2 / 2 / 3 / 3;
+        }
+        img:nth-of-type(5) {
+            grid-area: 2 / 3 / 3 / 4;
+        }
+    }
+
+    &__linkwrap {
+        text-align: right;
+        margin-top: 60px;
+    }
+
+    .btn {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 52px; 
+        color: white;
+        text-align: center;
+        margin-top: 25px;
+
+        &.btn-photos {
+            background-color: #28553f;
+            padding: 25px 40px 23px 41px;
+        }
     }
 }
