section "contacts" gulp-attached

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,10 +5,11 @@
 @import './abstracts/mixins';
 
 /* Blocks */
-@import './blocks/footer';
 @import './blocks/header';
 @import './blocks/hero';
 @import './blocks/advantages';
 @import './blocks/products';
 @import './blocks/promotion';
 @import './blocks/ideas';
+@import './blocks/contacts';
+@import './blocks/footer';
