--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,14 @@
 <section class="contacts">
     <h2 class="contacts__title">Остались вопросы?<br>свяжитесь с нами, мы вам поможем!</h2>
     <span class="contacts__subtitle">Заполните форму и мы свяжемся с Вами в ближайшее время</span>
+    <form action="" class="contacts__form">
+        <input class='contacts__form-input' type="text" placeholder="Ваше имя"> 
+        <input class='contacts__form-input' type="text" placeholder="Ваш телефон">
+        <button class='contacts__form-btn' type="submit">Отправить</button>
+    </form>
+    <div class="contacts__checkbox">
+        <label>
+            <input type="checkbox"> <span>Согласен на обработку персональных данных</span>
+        </label>
+    </div>
 </section>
