--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -8,7 +8,7 @@
     padding-left: 100px;
     margin-top: 100px;
 
-    &__title{
+    &__title {
         font-weight: 500;
         font-size: 28px;
         line-height: 33px;
@@ -22,6 +22,58 @@
         font-size: 18px;
         line-height: 21px;
         color: white;
-        margin-bottom: 30px;
+    }
+
+    &__form {
+        margin-top: 30px;
+        display: flex;
+        align-items: center;
+
+        &-input {
+            border: 1px solid #F3F3F3B2;
+           padding-top: 16px;
+           padding-bottom: 15px;
+           padding-left: 20px;
+            margin-right: 20px;
+            max-width: 240px;
+
+            &::placeholder {
+                color: #F3F3F3;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 19px;
+            }
+        }
+
+        &-btn {
+            background-color: white;
+            color: black;
+            font-weight: 700;
+            font-size: 15px;
+            line-height: 17px;
+            padding: 15px 80px 17px 80px;
+            border: none;
+            cursor: pointer;
+        }
+    }
+
+    &__checkbox {
+        display: flex;
+        align-items: center;
+
+        input[type="checkbox"] {
+            margin-right: 10px;
+        }
+
+        label {
+            margin-top: 20px; 
+        }
+
+        span {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 16px;
+            color: #F3F3F3;
+        }
     }
 }
