--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,53 @@
-<footer class="footer"></footer>
+<footer class="footer">
+    <div class="footer__column footer__column--logo">
+        <div class="footer__logowrapper">
+            <a href="/" class="footer__logo">
+                <img src="/img/logo.svg" width="290" height="115" alt="Логотип компании Anima" />
+            </a>
+            <span class="footer__title">камень с душой</span>
+        </div>
+    </div>
+    <div class="footer__column footer__column--menu">
+        <h3 class="footer__heading">Меню</h3>
+        <ul class="footer__list">
+            <li class="footer__item">Delivery & returns</li>
+            <li class="footer__item">FAQ</li>
+            <li class="footer__item">Contacts</li>
+            <li class="footer__item">Blog</li>
+        </ul>
+    </div>
+    <div class="footer__column footer__column--catalog">
+        <h3 class="footer__heading">Каталог</h3>
+        <ul class="footer__list">
+            <li class="footer__item">New arrivals</li>
+            <li class="footer__item">Trending</li>
+            <li class="footer__item">Sales</li>
+            <li class="footer__item">Brands</li>
+        </ul>
+    </div>
+    <div class="footer__column footer__column--contacts">
+        <h3 class="footer__heading">Контакты для связи</h3>
+        <p class="footer__contact">Телефон: <a href="tel:+140555501" class="footer__link">(405) 555-01</a></p>
+        <p class="footer__contact">Почта: <a href="mailto:hello@createx.com" class="footer__link">hello@createx.com</a></p>
+        <div class="footer__socials">
+            <svg class="footer__social-icon" width="24" height="24">
+                <use xlink:href="img/symbol/sprite.svg#facebook"></use>
+            </svg>
+            <svg class="footer__social-icon" width="24" height="24">
+                <use xlink:href="img/symbol/sprite.svg#Instagram"></use>
+            </svg>
+            <svg class="footer__social-icon" width="24" height="24">
+                <use xlink:href="img/symbol/sprite.svg#twitter"></use>
+            </svg>
+            <svg class="footer__social-icon" width="24" height="24">
+                <use xlink:href="img/symbol/sprite.svg#YouTube"></use>
+            </svg>
+            <svg class="footer__social-icon" width="24" height="24">
+                <use xlink:href="img/symbol/sprite.svg#pinterest"></use>
+            </svg>
+        </div>
+    </div>
+    <div class="footer__bottom">
+        <p class="footer__address">674 Gonzales Drive. Washington, PA 15301</p>
+    </div>
+</footer>
