--- a/src/partials/promotion.html
+++ b/src/partials/promotion.html
@@ -18,6 +18,7 @@
       <a href="#" class="btn btn-catalogue">Перейти в каталог</a>
   </div>
   <div class="promotion__gallery">
+    @@include('../partials/components/cardpreview.html')
     <img src="/img/product.png" alt="">
     <img src="/img/product.png" alt="">
     <img src="/img/product.png" alt="">
