Основные стили для превью

--- a/src/partials/components/cardpreview.html
+++ b/src/partials/components/cardpreview.html
@@ -1,3 +1,12 @@
-<article>
-    <img src="/img/product.png" alt="">
+<article class="preview">
+  <div class="preview__picture">
+    <img class="preview__image" src="/img/product.png" alt="" />
+  </div>
+  <div class="preview__body">
+    <h3 class="preview__title">Kratki</h3>
+    <p class="preview__description">Каминная топка Kratki ZUZIA LPT</p>
+    <span class="price">16 490 &#8381;</span>
+    <button class="preview__details">Подробнее</button>
+  </div>
+
 </article>
