--- a/src/partials/promotion.html
+++ b/src/partials/promotion.html
@@ -19,9 +19,9 @@
   </div>
   <div class="promotion__gallery">
     @@include('../partials/components/cardpreview.html')
+    <!-- <img src="/img/product.png" alt=""> -->
+    <!-- <img src="/img/product.png" alt="">
     <img src="/img/product.png" alt="">
-    <img src="/img/product.png" alt="">
-    <img src="/img/product.png" alt="">
-    <img src="/img/product.png" alt="">
+    <img src="/img/product.png" alt=""> -->
   </div>
 </section>
