--- a/src/css/main.css
+++ b/src/css/main.css
@@ -671,4 +671,52 @@ legend {
 
 .footer__column--menu {
   margin-left: 60px;
+}
+
+.preview {
+  background-color: rgba(255, 255, 255, 0.9607843137);
+}
+.preview__picture {
+  margin-bottom: 25px;
+}
+.preview__body {
+  display: flex;
+  flex-direction: column;
+  padding: 0 18px 0 17px;
+}
+.preview__body > * {
+  margin-bottom: 15px;
+}
+.preview__title {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 22px;
+  color: #28553f;
+  margin-bottom: 6px;
+}
+.preview__description {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  color: #000000;
+  margin-bottom: 16px;
+}
+.preview .price {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 23px;
+  color: #28553f;
+  margin-bottom: 21px;
+}
+.preview .preview__details {
+  width: 100%;
+  background-color: #28553f;
+  text-align: center;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  color: white;
 }/*# sourceMappingURL=main.css.map */
