anchor/pseudo-elem

--- a/src/partials/components/cardpreview.html
+++ b/src/partials/components/cardpreview.html
@@ -3,7 +3,7 @@
     <img class="preview__image" src="/img/product.png" alt="" />
   </div>
   <div class="preview__body">
-    <h3 class="preview__title">Kratki</h3>
+    <h3 class="preview__title"><a href="#">Kratki</a></h3>
     <p class="preview__description">Каминная топка Kratki ZUZIA LPT</p>
     <span class="price">16 490 &#8381;</span>
     <button class="preview__details">Подробнее</button>
