--- a/src/css/main.css
+++ b/src/css/main.css
@@ -675,6 +675,7 @@ legend {
 
 .preview {
   background-color: rgba(255, 255, 255, 0.9607843137);
+  position: relative;
 }
 .preview__picture {
   margin-bottom: 25px;
@@ -694,6 +695,14 @@ legend {
   color: #28553f;
   margin-bottom: 6px;
 }
+.preview__title a::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .preview__description {
   font-size: 16px;
   font-weight: 500;
@@ -709,12 +718,14 @@ legend {
   margin-bottom: 21px;
 }
 .preview .preview__details {
+  position: relative;
   width: 100%;
   background-color: #28553f;
   text-align: center;
   padding: 10px;
   border: none;
   cursor: pointer;
+  z-index: 10;
   font-size: 17px;
   font-weight: 400;
   line-height: 20px;
