--- a/src/styles/blocks/_cardpreview.scss
+++ b/src/styles/blocks/_cardpreview.scss
@@ -1,5 +1,6 @@
 .preview {
   background-color: #fffffff5;
+  position: relative;
 
   &__picture {
     margin-bottom: 25px;
@@ -21,6 +22,15 @@
     line-height: 22px;
     color: #28553f;
     margin-bottom: 6px;
+
+    a::after {
+        content:"";
+        position: absolute;
+        top:0;
+        left:0;
+        width: 100%;
+        height: 100%;
+    }
   }
 
   &__description {
@@ -40,12 +50,14 @@
   }
 
   .preview__details {
+    position: relative;
     width: 100%;
     background-color: #28553f;
     text-align: center;
     padding: 10px;
     border: none;
     cursor: pointer;
+    z-index:10;
 
     font-size: 17px;
     font-weight: 400;
