--- a/src/css/main.css
+++ b/src/css/main.css
@@ -401,18 +401,16 @@ legend {
   text-align: right;
   margin-right: 50px;
 }
+.promotion__content {
+  display: flex;
+}
 .promotion__infoblock {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 707px;
-  position: absolute;
+  max-width: 700px;
   background-color: #000;
   padding: 41px 17px 47px 100px;
-  z-index: 3;
-  transform: translate(0%, 40%);
-  left: -6%;
-  margin-left: 70px;
   gap: 20px;
 }
 .promotion__title {
@@ -446,15 +444,10 @@ legend {
   background-color: #28553f;
 }
 .promotion__gallery {
-  position: absolute;
+  display: flex;
   flex-wrap: wrap;
-  right: 0;
-  max-width: 40%;
+  max-width: 50%;
   margin-top: 15px;
-}
-.promotion__gallery img {
-  gap: 20px;
-  margin: 20px;
 }
 
 .ideas {
@@ -676,6 +669,7 @@ legend {
 .preview {
   background-color: rgba(255, 255, 255, 0.9607843137);
   position: relative;
+  margin: 10px;
 }
 .preview__picture {
   margin-bottom: 25px;
