--- a/src/styles/blocks/_promotion.scss
+++ b/src/styles/blocks/_promotion.scss
@@ -19,19 +19,18 @@
       text-align: right;
       margin-right: 50px;
     }
+
+    &__content {
+      display:flex;
+    }
   
     &__infoblock {
       display: flex;
       flex-direction: column; 
       justify-content: center;
-      max-width: 707px;
-      position: absolute;
+      max-width: 700px;
       background-color: #000;
       padding: 41px 17px 47px 100px;
-      z-index: 3;
-      transform: translate(0%, 40%);
-      left: -6%;
-      margin-left: 70px;
       gap:20px;
     }
   
@@ -71,15 +70,10 @@
     }
 
     &__gallery{
-       position: absolute;
+      display: flex;
         flex-wrap: wrap;
-        right:0;
-        max-width: 40%;
+        max-width: 50%;
         margin-top: 15px;
     
-        img{
-            gap:20px;
-            margin: 20px;
-        }
     }
   }
