директива @@/динам замена данных (из json'a)

--- a/src/partials/components/cardpreview.html
+++ b/src/partials/components/cardpreview.html
@@ -1,11 +1,11 @@
 <article class="preview">
   <div class="preview__picture">
-    <img class="preview__image" src="/img/product.png" alt="" />
+    <img class="preview__image" src="/img/@@image.png" alt="" />
   </div>
   <div class="preview__body">
-    <h3 class="preview__title"><a href="#">Kratki</a></h3>
-    <p class="preview__description">Каминная топка Kratki ZUZIA LPT</p>
-    <span class="price">16 490 &#8381;</span>
+    <h3 class="preview__title"><a href="#">@@title</a></h3>
+    <p class="preview__description">@@description</p>
+    <span class="price">@@price &#8381;</span>
     <button class="preview__details">Подробнее</button>
   </div>
 
