Включение стилей для других страниц (подсоединено)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,9 @@
 @import './blocks/contacts';
 @import './blocks/footer';
 @import './blocks/cardpreview';
+
+
+/*Other Pages Styles*/
+@import './otherpages/card';
+@import './otherpages/catalogue';
+@import './otherpages/errorpage';
