убираем стилевые заглушки и подсоединяем секцию contacts к другим страницам

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -726,19 +726,4 @@ legend {
   color: white;
 }
 
-/*Other Pages Styles*/
-h1 {
-  background-color: hwb(106 31% 9%);
-}
-
-h2 {
-  background-color: lab(80% -80 50);
-}
-
-.catalogue {
-  background-color: lch(45% 120 20);
-}
-
-.danger {
-  background-color: color(display-p3 1 0 0);
-}/*# sourceMappingURL=main.css.map */
+/*Other Pages Styles*//*# sourceMappingURL=main.css.map */
