--- a/src/css/main.css
+++ b/src/css/main.css
@@ -726,4 +726,35 @@ legend {
   color: white;
 }
 
-/*Other Pages Styles*//*# sourceMappingURL=main.css.map */
+/*Other Pages Styles*/
+.error-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 50px;
+  min-height: 50vh;
+}
+.error-page__image {
+  margin-bottom: 26px;
+}
+.error-page__title {
+  font-weight: 400;
+  font-size: 60px;
+  line-height: 70px;
+  color: #282a30;
+  margin-top: 26px;
+  width: 100%;
+  text-transform: uppercase;
+}
+.error-page__link {
+  display: inline-block;
+  background-color: #28553f;
+  padding: 18px 60px;
+  font-weight: 500;
+  font-size: 19px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: white;
+  margin-top: 55px;
+}/*# sourceMappingURL=main.css.map */
