--- a/src/css/main.css
+++ b/src/css/main.css
@@ -727,6 +727,81 @@ legend {
 }
 
 /*Other Pages Styles*/
+.catalog__title {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 47px;
+  margin-bottom: 18px;
+  margin-top: 63px;
+  margin-left: 30px;
+  color: #282a30;
+  text-transform: uppercase;
+}
+.catalog__subtitle {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 47px;
+  color: #28553f;
+  text-transform: uppercase;
+}
+.catalog__divider {
+  border: 1px solid #e5e5e5;
+  margin: 18px 30px;
+}
+.catalog__controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.catalog__accordion {
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+}
+.catalog__accordion .catalog__link {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  margin-right: 8px;
+  color: #9c9c9c;
+}
+.catalog__accordion .catalog__link--highlight {
+  color: #28553f;
+}
+.catalog__accordion .catalog__arrow {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 5px solid #9c9c9c;
+  margin-right: 4px;
+}
+.catalog__accordion .highlight {
+  color: #28553f;
+}
+.catalog__sort {
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+}
+.catalog__sort .catalog__sort-label, .catalog__sort .catalog__show-label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  margin-right: 11px;
+  color: #9c9c9c;
+}
+.catalog__sort .catalog__sort-option, .catalog__sort .catalog__show-option {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  color: #28553f;
+  margin-right: 36px;
+  cursor: pointer;
+}
+
 .error-page {
   display: flex;
   flex-direction: column;
