--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,11 +28,11 @@
 
     <nav class="header__nav">
       <ul class="nav__list">
-        <li class="nav__item"><a href="#!">КАТАЛОГ</a></li>
-        <li class="nav__item"><a href="#!">АКЦИИ</a></li>
-        <li class="nav__item"><a href="#!">БЛОГ</a></li>
-        <li class="nav__item"><a href="#!">СОТРУДНИЧЕСТВО</a></li>
-        <li class="nav__item"><a href="/">ОПЛАТА И ДОСТАВКА</a></li>
+        <li class="nav__item"><a href="#">КАТАЛОГ</a></li>
+        <li class="nav__item"><a href="#">АКЦИИ</a></li>
+        <li class="nav__item"><a href="#">БЛОГ</a></li>
+        <li class="nav__item"><a href="#">СОТРУДНИЧЕСТВО</a></li>
+        <li class="nav__item"><a href="#">ОПЛАТА И ДОСТАВКА</a></li>
       </ul>
     </nav>
 </div>
