--- a/src/css/main.css
+++ b/src/css/main.css
@@ -754,22 +754,22 @@ legend {
   align-items: center;
   margin-bottom: 1rem;
 }
-.catalog__accordion {
+.catalog__acc {
   display: flex;
   align-items: center;
   margin-left: 30px;
 }
-.catalog__accordion .catalog__link {
+.catalog__acc .catalog__link {
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
   margin-right: 8px;
   color: #9c9c9c;
 }
-.catalog__accordion .catalog__link--highlight {
+.catalog__acc .catalog__link--highlight {
   color: #28553f;
 }
-.catalog__accordion .catalog__arrow {
+.catalog__acc .catalog__arrow {
   display: inline-block;
   width: 0;
   height: 0;
@@ -778,7 +778,7 @@ legend {
   border-left: 5px solid #9c9c9c;
   margin-right: 4px;
 }
-.catalog__accordion .highlight {
+.catalog__acc .highlight {
   color: #28553f;
 }
 .catalog__sort {
@@ -800,6 +800,33 @@ legend {
   color: #28553f;
   margin-right: 36px;
   cursor: pointer;
+}
+.catalog__items {
+  display: flex;
+  flex-direction: column;
+  background-color: #F9F9F9;
+  width: 288px;
+  border: none;
+}
+.catalog__items .catalog__accordion-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 15px;
+  border-bottom: 1px solid #e5e5e5;
+}
+.catalog__items .catalog__accordion-item:last-child {
+  border-bottom: none;
+}
+.catalog__items .catalog__accordion-item .catalog__accordion-title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #282a30;
+  margin-right: 10px;
+}
+.catalog__items .catalog__accordion-item .icon {
+  flex-shrink: 0;
 }
 
 .error-page {
