немного промежуточных стилей catalogue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -804,6 +804,8 @@ legend {
 .catalog__content {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
+  margin-top: 50px;
 }
 .catalog__accordion {
   display: flex;
