--- a/src/css/main.css
+++ b/src/css/main.css
@@ -806,6 +806,7 @@ legend {
   justify-content: center;
   align-items: flex-start;
   margin-top: 50px;
+  margin-left: 80px;
 }
 .catalog__accordion {
   display: flex;
@@ -847,6 +848,17 @@ legend {
   width: 247px;
   height: 220px;
   display: block;
+}
+.catalog__showmore {
+  font-weight: 300;
+  font-size: 21px;
+  line-height: 24px;
+  color: #282A30;
+}
+.catalog__linkwrap {
+  text-align: right;
+  margin-right: 50px;
+  margin-top: 60px;
 }
 
 .error-page {
