--- a/src/styles/otherpages/_catalogue.scss
+++ b/src/styles/otherpages/_catalogue.scss
@@ -92,6 +92,7 @@
     justify-content: center;
     align-items: flex-start;
     margin-top: 50px;
+    margin-left: 80px;
   }
 
   &__accordion {
@@ -143,6 +144,19 @@
       display: block;
     }
   }
+}
+
+&__showmore {
+     font-weight: 300;   
+  font-size: 21px;
+  line-height: 24px;
+  color: #282A30;
+}
+
+&__linkwrap{
+  text-align:right;
+  margin-right: 50px;
+  margin-top: 60px;
 }
  
 }
