--- a/src/css/main.css
+++ b/src/css/main.css
@@ -815,26 +815,29 @@ legend {
   width: 288px;
   border: none;
 }
-.catalog__accordion .catalog__accordion-item {
+.catalog__accordion .catalog__accordion-item, .catalog__accordion .catalog__accordion-subitem {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 15px;
   border-bottom: 1px solid #e5e5e5;
 }
-.catalog__accordion .catalog__accordion-item:last-child {
+.catalog__accordion .catalog__accordion-item:last-child, .catalog__accordion .catalog__accordion-subitem:last-child {
   border-bottom: none;
 }
-.catalog__accordion .catalog__accordion-item .catalog__accordion-title {
+.catalog__accordion .catalog__accordion-item .catalog__accordion-title, .catalog__accordion .catalog__accordion-subitem .catalog__accordion-title {
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
   color: #282a30;
   margin-right: 10px;
 }
-.catalog__accordion .catalog__accordion-item .icon {
+.catalog__accordion .catalog__accordion-item .icon, .catalog__accordion .catalog__accordion-subitem .icon {
   flex-shrink: 0;
   transform: rotate(-90deg);
+}
+.catalog__accordion .catalog__accordion-subitem {
+  padding-left: 30px;
 }
 .catalog__gallery {
   display: flex;
