Заголовок к карточке товара (card.html)

--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -36,6 +36,8 @@
            padding-left: 20px;
             margin-right: 20px;
             max-width: 240px;
+            caret-color: #fff;
+            color: #FFF;
 
             &::placeholder {
                 color: #F3F3F3;
