--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -1,3 +1,79 @@
+.card {
 
+    &__title {
+        font-weight: 400;
+        font-size: 40px;
+        line-height: 47px;
+        margin-bottom: 18px;
+        margin-top: 16px;
+        margin-left: 30px;
+        color: #282a30;
+        text-transform: uppercase;
+      }
+
+      &__divider {
+        border: 1px solid #e5e5e5;
+        margin: 23px 30px;
+      }
+    
+    &__controls {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 1rem;
+      }
+    
+      &__acc {
+        display: flex;
+        align-items: center;
+        margin-left: 30px;
+    
+        & .card__link {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 18px;
+          margin-right: 8px;
+          color: #9c9c9c;
+        }
+    
+        & .card__link--highlight {
+          color: #28553f;
+        }
+    
+        & .card__arrow {
+          display: inline-block;
+          width: 0;
+          height: 0;
+          border-top: 5px solid transparent;
+          border-bottom: 5px solid transparent;
+          border-left: 5px solid #9c9c9c;
+          margin-right: 4px;
+        }
+    
+        & .highlight {
+          color: #28553f;
+        }
+      }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
 
 
