--- a/src/css/main.css
+++ b/src/css/main.css
@@ -776,6 +776,25 @@ legend {
 .card__acc .highlight {
   color: #28553f;
 }
+.card__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px;
+}
+.card__header .card__info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-right: 30px;
+  gap: 10px;
+}
+.card__header .card__info .card__model, .card__header .card__info .card__article {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 25px;
+  color: #28553F;
+}
 
 .catalog__title {
   font-weight: 400;
