--- a/src/styles/otherpages/_card.scss
+++ b/src/styles/otherpages/_card.scss
@@ -55,25 +55,29 @@
         }
       }
 
+      &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 30px;
 
+        & .card__info {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            margin-right: 30px;
+            gap: 10px;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            & .card__model,
+            & .card__article {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 25px;
+                color: #28553F;
+                
+            }
+        }
+    }
 }
 
 
